--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitcore-message-zelcash",
+  "name": "bitcore-message-vcoin",
   "version": "1.0.3",
   "description": "ZelCash Messages for Bitcore",
   "main": "index.js",
@@ -10,7 +10,7 @@
     "build": "gulp"
   },
   "keywords": [
-    "zelcash",
+    "vcoin",
     "bitcore",
     "btc",
     "satoshi",
@@ -19,13 +19,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/zelcash/bitcore-message-zelcash.git"
+    "url": "https://github.com/vcoin/bitcore-message-vcoin.git"
   },
   "dependencies": {
-    "bitcore-lib-zelcash": "git://github.com/zelcash/bitcore-lib-zelcash#master"
+    "bitcore-lib-vcoin": "git://github.com/vcoin/bitcore-lib-vcoin#master"
   },
   "devDependencies": {
-    "bitcore-build-zelcash": "git://github.com/zelcash/bitcore-build-zelcash#master",
+    "bitcore-build-vcoin": "git://github.com/vcoin/bitcore-build-vcoin#master",
     "brfs": "^1.3.0",
     "chai": "~1.10.0",
     "gulp": "^3.8.10"
